2-3-09: #1191, remove "sim startup time" calculation
2-2-09: #1145, add support for version.timestamp, stored in project properties file, displayed in About dialog
2-2-09: #1086, add support for distribution.tag, stored in project properties file, displayed in About dialog
2-2-09: #1130, rewrite SessionsCounter, add sim_sessions_since support
1-28-09: #1087, add detection of phet dev, phet prod, other website to deployment scenarios
1-28-09: #1087, add additional FileUtils, fix getCodeSource
1-27-09: #1087, use singleton and Java 1.4 typesafe enum patterns to reimplement deployment scenario
1-27-09: #895, clean up initial sizing of license dialog
1-27-09: #995, delete deprecated jawaws.phet.locale, no need for this in redeployed sims
1-23-09: add HTMLUtils methods for to support combining HTML strings
1-21-09: #840, new rewind button in piccolo clock controls
1-18-09: update copyright date for 2009
1-14-09: refactor code that accesses the sim-version-info service
1-14-09: #1095, add developer control to always show software agreement
1-13-09: #1095, added dialog that handles negotiation of software and privacy agreements
1-13-09: #1095, added privacy.agreement.version property to preference file API
1-13-09: refactor HTMLEditorPane hierarchy to support other types of hyperlink behavior
1-13-09: #1073, replace "Details" button in Privacy Preferences with a hyperlink
1-13-09: put tracking details in a scrollpane
1-13-09: #1073, change Privacy tab in Preferences dialog to correspond to specification
1-13-09: #1073, rename "tracking" to "privacy" where visible in Preferences dialog
1-9-09: #588, delete SimStrings
1-8-09: #1008, #1073, revised session message
1-8-09: #1085, delete obsolete tracking message types
1-8-09: #1058, increase height of PhetTabbedPane.TabBase by 50%
1-7-09: #1055, add support for locale country code to phetcommon
1-6-09: #920, back out quit handler for Mac OS X and contrib/apple (OSXAdapter)