@@ -1,3 +1,4 @@
+2-4-09: #1192, make SessionMessage a singleton
 2-3-09: #1191, remove "sim startup time" calculation
 2-2-09: #1145, add support for version.timestamp, stored in project properties file, displayed in About dialog
 2-2-09: #1086, add support for distribution.tag, stored in project properties file, displayed in About dialog
